azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnet_name": {
            "defaultValue": "TF2-VNET",
            "type": "String"
        },
        "subnet_name": {
            "defaultValue": "Subnet",
            "type": "String"
        },
        "nic_name": {
            "defaultValue": "TF2Nic",
            "type": "String"
        },
        "vm_name": {
            "defaultValue": "TF2Server",
            "type": "String"
        },
        "nsg_name": {
            "defaultValue": "TF2NSG",
            "type": "String"
        },
        "publicip_name": {
            "defaultValue": "TF2PublicIP",
            "type": "String"
        },
        "vm_size": {
            "defaultValue": "Standard_B1ms",
            "type": "string"
        },
        "ssh_key": {
            "type": "string"
        },
        "ssh_ip": {
            "type": "string"
        },
        "rcon_password": {
            "type": "securestring"
        }
    },
    "variables": {
        "location": "[resourceGroup().location]",
        "customData": "[concat('#include https://raw.githubusercontent.com/jacobludriks/tf2server/master/cloud-config.txt')]",
        "storageAccount": "[concat('tf2diag',uniqueString(subscription().subscriptionId))]",
        "keyVault": "[concat('tf2kv',uniqueString(subscription().subscriptionId))]"
    },
    "resources": [
        {
            "name": "[parameters('vnet_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-07-01",
            "location": "[variables('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.90.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnet_name')]",
                        "properties": {
                            "addressPrefix": "10.90.1.0/24"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-07-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('ssh_ip')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "TF2Udp",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27015",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 510,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "TF2Tcp",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27015",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('publicip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-07-01",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "name": "[parameters('vm_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2020-12-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vm_size')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        }
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('vm_name')]",
                    "adminUsername": "tf2oeadmin",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/tf2oeadmin/.ssh/authorized_keys",
                                    "keyData": "[parameters('ssh_key')]"
                                }
                            ]
                        },
                        "provisionVMAgent": true
                    },
                    "customData": "[base64(variables('customData'))]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic_name'))]",
                            "properties": {
                                "primary": true
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', variables('storageAccount'), '.blob.core.windows.net/')]"
                    }
                }
            },
            "identity": {
                "type": "SystemAssigned"
            },
            "resources": [
                {
                    "name": "config-app",
                    "type": "extensions",
                    "location": "[variables('location')]",
                    "apiVersion": "2019-03-01",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', parameters('vm_name'))]"
                    ],
                    "tags": {
                        "displayName": "config-app"
                    },
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.1",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "https://raw.githubusercontent.com/jacobludriks/tf2server/master/rcon_env.sh"
                            ],
                            "commandToExecute": "[concat('source rcon_env.sh -v', variables('keyVault'))]"
                        },
                        "protectedSettings": {
                        }
                    }
                }
            ]
        },
        {
            "name": "[parameters('nic_name')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-07-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnet_name'), parameters('subnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_name'))]"
                }
            }
        },
        {
            "name": "[variables('storageAccount')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2021-02-01",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "StorageV2"
        },
        {
            "name": "[variables('keyVault')]",
            "type": "Microsoft.KeyVault/vaults",
            "apiVersion": "2019-09-01",
            "location": "[variables('location')]",
            "properties": {
                "tenantId": "[subscription().tenantId]",
                "sku": {
                    "family": "A",
                    "name": "standard"
                },
                "enableRbacAuthorization": true
            }
        },
        {
            "name": "[concat(variables('keyVault'),'/rconpassword')]",
            "type": "Microsoft.KeyVault/vaults/secrets",
            "apiVersion": "2019-09-01",
            "location": "[variables('location')]",
            "properties": {
                "value": "[parameters('rcon_password')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.KeyVault/vaults', variables('keyVault'))]"
            ]
        },
        {
            "type": "Microsoft.Authorization/roleAssignments",
            "apiVersion": "2018-09-01-preview",
            "name": "[guid(resourceGroup().id)]",
            "properties": {
                "roleDefinitionId": "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Authorization/roleDefinitions/', '4633458b-17de-408a-b874-0445c86b69e6')]",
                "principalId": "[reference(resourceId('Microsoft.Compute/virtualMachines', parameters('vm_name')), '2020-12-01').principalId]",
                "principalType": "ServicePrincipal"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('vm_name'))]",
                "[resourceId('Microsoft.KeyVault/vaults', variables('keyVault'))]"
            ]
        }
    ]
}
